test/sematest/invalid/duplicate_methods.java
class Test {
  public int method1(){}
  public int method1(){}
}
